platform-services/dataplane/traffic-split/99-asg-1-k8s/envoy-patch.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: dataplane-envoy-config
data:
  envoy.yaml: |
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901

    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
                - name: envoy.file_access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/stdout
                    log_format:
                      json_format:
                        start_time: "%START_TIME%"
                        request_method: "%REQ(:METHOD)%"
                        path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                        downstream_local_address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                        downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                        protocol: "%PROTOCOL%"
                        response_code: "%RESPONSE_CODE%"
                        response_flags: "%RESPONSE_FLAGS%"
                        response_code_details: "%RESPONSE_CODE_DETAILS%"
                        connection_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
                        bytes_received: "%BYTES_RECEIVED%"
                        bytes_sent: "%BYTES_SENT%"
                        duration: "%DURATION%"
                        response_upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                        x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                        user_agent: "%REQ(USER-AGENT)%"
                        request_id: "%REQ(X-REQUEST-ID)%"
                        request_authority: "%REQ(:AUTHORITY)%"
                        upstream_host: "%UPSTREAM_HOST%"
                        upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                        upstream_cluster: "%UPSTREAM_CLUSTER%"
                        upstream_protocol: "%UPSTREAM_PROTOCOL%"
                        requested_server_name: "%REQUESTED_SERVER_NAME%"
                        route_name: "%ROUTE_NAME%"
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match: {prefix: "/"}
                    route:
                      cluster: core-web-global-upstream
                      timeout: "120s"
                      retry_policy:
                        retry_on: "connect-failure,gateway-error"
                        num_retries: 10
                        retry_back_off:
                          base_interval: "5s"
                          max_interval: "30s"
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: core-web-global-upstream
        connect_timeout: 2.5s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        common_lb_config:
          healthy_panic_threshold:
            value: 0
        load_assignment:
          cluster_name: core-web-global-upstream
          endpoints:
          - lb_endpoints:
            # ASG Web Pool - 99% traffic
            - endpoint:
                address:
                  socket_address:
                    address: asg-web-pool
                    port_value: 80
              load_balancing_weight: 99
            # K8s Web Pool - 1% traffic  
            - endpoint:
                address:
                  socket_address:
                    address: core-web-global
                    port_value: 80
              load_balancing_weight: 1
